bugg fix i memory

--- a/project.memory.json
+++ b/project.memory.json
@@ -23,7 +23,19 @@
       "command": "npm run lint"
     }
   },
-  "todos": [],
+  "todos": [
+    {
+      "id": 1,
+      "status": "completed",
+      "title": "Plan steps to verify prompt flow delivery"
+    }
+  ],
   "milestones": [],
-  "history": []
+  "history": [
+    {
+      "date": "2026-01-19",
+      "type": "change",
+      "summary": "Updated documentation to include recent changes: prompt flow plan, QA verification, and code review feedback."
+    }
+  ]
 }
